--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+requests==2.13.0
 SQLAlchemy==1.0.15
 Werkzeug==0.11.11
 WTForms==2.1
